# ridingintheparkwithparrots

./: Cargo.toml  LICENSE  README.md  notes.md
assets/: handle_indicator.png~  parrot_blue_1.png~  rotation_indicator.png~
controller/: README.md
controller/arduino-esp32/: README.md  arduino-esp32.ino
controller/arduino-esp32-c3/: controller-sketch-esp32-c3.ino
controller/esp32-c3-rust/: Cargo.toml  README.md
controller/esp32-c3-rust-no-std/: Cargo.toml
controller/esp32-c3-rust-no-std/src/: main.rs
controller/esp32-c3-rust/.cargo/: config.toml
controller/esp32-c3-rust/src/: main.rs
game/: Cargo.toml  Cross.toml  README.md  deploy.sh
game/.cargo/: config
game/assets/: parrot_red_1.png~  parrot_red_2.png~
game/assets/fonts/: SIL Open Font License.txt
game/src/: controller.rs  game_over.rs  level.rs  main.rs  parrot.rs  player.rs  score.rs
game/src/practise/: camera.rs  world.rs
src/: bullet.rs  camera.rs  game_over.rs  main.rs  main_menu.rs  new_player.rs  parrot.rs  player.rs  target.rs  tower.rs  world.rs
src/practise/: bullet.rs  main_menu.rs  new_player.rs
