[package]
name = "ridingintheparkwithparrots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.11.2"
# switch before release build
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_third_person_camera = "0.1.5"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
